# Lead

./: .gitignore  CMakeLists.txt  README.md
include/lead/: block.h  boundingbox.h  camera.h  color.h  common.h  euclidean.h  fileresolver.h  frame.h  integrator.h  leadexception.h  object.h  parser.h  proplist.h  render.h  sampler.h  scene.h  shape.h  transform.h
scenes/: temp.xml  test.exr  test.xml  test_orthogonal.exr  test_perspective.exr
src/: camera.cpp  common.cpp  direct.cpp  euclidean.cpp  independent.cpp  integrator_binary.cpp  integrator_normal.cpp  main.cpp  object.cpp  scene.cpp  sphere.cpp  transform.cpp
